# qyp-scratch

./: README.md  README.org  SConstruct
circle_fitting/: circle_fitting.py  smallest_circle_problem.py
dl_from_scratch/: dl_from_scratch.ipynb
gym/: Cart-Pole.py  rl_intro_gym_example.py
image_processing/: photo_tools.py
scratch/: CMakeLists.txt  SConstruct  sieve.hpp  sieve_test.cpp  time.hpp
scratch/base/: time.hpp
scratch/sieve/: CMakeLists.txt  sieve.hpp  sieve_test.cpp
sieve/base/: CMakeLists.txt  config.hpp  time.cpp  time.hpp
sieve/sieve/: sieve.cpp
simple_interpreter/: README.md  calculator_interpreter.py
sudoku/: sudoku.py
three_pigs/: three_pigs.js  three_pigs.py
tsp/: tsp_solver.py
two_bottle_puzzle/: Makefile  bezout_solver.py  main.c  puzzle.c  simple_solver.py  two_bottle_puzzle.c  two_bottle_puzzle.h
